fix(entire): パッケージ名をkotodamakotobaに変更

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kotodama",
+  "name": "kotodamakotoba",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "whisky shusuky <whisky.shusuky@gmail.com>",
